<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:stretchColumns="0"
    >
    <TableRow>
        <TextView
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/row1_name"
            android:textSize="25sp" />

        <TextView
            android:gravity="right"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/row1_name2"
            android:textSize="25sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/row2"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/row2_name"
            />
        <TextView
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/row2_name2"
            android:textSize="25sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/row3"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/row3_name"
            />
        <TextView
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/row3_name2"
            android:textSize="25sp" />
    </TableRow>
    <TableRow>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_height="4dp"/>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_height="4dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/row4"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/row4_name"
         />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/row5"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:textSize="25sp"
            android:text="@string/row5_name"
            />
        <TextView
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/row5_name2"
            android:textSize="25sp" />
    </TableRow>
    <TableRow>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_height="4dp"/>
        <View
            android:background="@color/colorPrimaryDark"
            android:layout_height="4dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/row6"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/row6_name"
            />
    </TableRow>
</TableLayout>

